--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <td><button type="button">0</button></td>
                     <td><button type="button">.</button></td>
                     <td><button type="button">=</button></td>
-                    <td><button type="button">+</button></td>
+                    <td><button type="button">Del</button></td>
                 </tr>
             </tbody>
         </table>
